k8s/constraint_PodSecurityStandards.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: PodSecurityStandards
metadata:
  name: podsecuritystandards
